doctorapp/force-app/main/default/objects/Schedule__c/Schedule__c.object-meta.xml
<CustomObject>
    <description>An appointment the clinic holds. The UI word is "appointment"; the persisted object is Schedule__c.</description>
    <label>Schedule</label>
    <nameField>
        <displayFormat>SCH-{00000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>