doctorapp/force-app/main/default/objects/Schedule__c/fields/DurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationMinutes__c</fullName>
    <label>Duration (min)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>