doctorapp/force-app/main/default/objects/Schedule__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <label>Fees</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>