doctorapp/force-app/main/default/objects/Schedule__c/fields/PhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber2__c</fullName>
    <label>Phone Number 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>