doctorapp/force-app/main/default/objects/Schedule__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>